# thunderRAG

./: .gitignore  Makefile  README.md
ThunderRAG/: Makefile  README.md  background.js  manifest.json
ThunderRAG/experiments/ragFilterAction/: parent.js  schema.json
ThunderRAG/ui/: ingested-detail.html  ingested-detail.js  options.html  options.js  query.html  query.js
ocaml-server/: Makefile  README.md  bulk_ingest.sh  dune  dune-project  prompts.json  rag_email_server.opam  reset_index.sh  settings.example.json
ocaml-server/lib/: body_extract.ml  config.ml  dune  html.ml  mime.ml  pg.ml  sql_validate.ml  text_util.ml
ocaml-server/test/: dune  helpers.ml  quality_harness.ml  run_tests.ml  test_admin.ml  test_delete.ml  test_ingest.ml  test_query_flow.ml  test_routing.ml
ocaml-server/tests/: QUALITY_HARNESS.md  README.md  conftest.py  corpus.json  gen_corpus.py  gen_helpers.py  gen_test_cases.py  render_report.py  test_admin.py  test_cases.json  test_delete.py  test_ingest.py  test_quality.py  test_query_flow.py  test_routing.py
python-engine/: Makefile  README.md  app.py  requirements.txt
python-engine/tests/: conftest.py  requirements.txt  test_delete.py  test_health.py  test_ingest.py  test_query.py  test_reset.py  test_roundtrip.py
